Fix the build without ENABLE_VIDEO https://bugs.webkit.org/show_bug.cgi?id=302943

Reviewed by Michael Catanzaro.

* Source/WebCore/platform/graphics/AudioVideoRenderer.h:
* Source/WebCore/rendering/RenderVideoInlines.h:
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:

Canonical link: https://commits.webkit.org/303425@main